--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta property="og:type" content="website">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/framer-motion@11/dist/framer-motion.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -280,6 +281,6 @@
       const root = ReactDOM.createRoot(document.getElementById('root'));
       root.render(React.createElement(App));
     </script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
   </body>
 </html>
