--- a/index.html
+++ b/index.html
@@ -2,146 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nishant Pangare - Portfolio</title>
-  <meta name="description" content="Portfolio of Nishant Pangare, Data Scientist" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/framer-motion@11/dist/framer-motion.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    html { scroll-behavior: smooth; }
-    body { font-family: 'Inter', sans-serif; }
+    body { font-family: 'Inter', sans-serif; background: #0f172a; color: white; }
     .gradient-text {
       background: linear-gradient(to right, #06b6d4, #8b5cf6, #ec4899);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    .glass {
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255,255,255,0.1);
-    }
-    .typing::after {
-      content: '|';
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 50% { opacity: 1; }
-      51%, 100% { opacity: 0; }
-    }
   </style>
 </head>
-<body class="bg-gray-900 text-white">
-  <div id="root"></div>
+<body class="text-center px-4 py-10">
+  <img src="nishant-photo.jpeg" alt="Nishant Pangare" class="w-32 h-32 mx-auto rounded-full border-4 border-cyan-500 shadow-lg" />
+  <h1 class="text-4xl font-bold mt-6 gradient-text">Nishant Pangare</h1>
+  <p class="text-lg text-gray-300 mt-2">Aspiring Data Scientist & AI Enthusiast</p>
 
-  <script type="text/babel">
-    const { useState, useEffect } = React;
-    const { motion } = window.FramerMotion;
+  <div class="mt-6 space-x-4">
+    <a href="mailto:nishant.pangare22@gmail.com" class="text-cyan-400 hover:underline">Email</a>
+    <a href="https://linkedin.com/in/nishant-pangare" target="_blank" class="text-cyan-400 hover:underline">LinkedIn</a>
+    <a href="https://github.com/nishantpangare" target="_blank" class="text-cyan-400 hover:underline">GitHub</a>
+  </div>
 
-    const Typing = ({ words }) => {
-      const [index, setIndex] = useState(0);
-      const [text, setText] = useState('');
-      const [deleting, setDeleting] = useState(false);
+  <div class="mt-10">
+    <h2 class="text-2xl font-semibold mb-2">Projects</h2>
+    <p class="text-gray-400">Coming soon...</p>
+  </div>
 
-      useEffect(() => {
-        const current = words[index];
-        const speed = deleting ? 40 : 100;
-
-        const timeout = setTimeout(() => {
-          setText(prev =>
-            deleting ? current.substring(0, prev.length - 1) : current.substring(0, prev.length + 1)
-          );
-
-          if (!deleting && text === current) {
-            setTimeout(() => setDeleting(true), 1500);
-          } else if (deleting && text === '') {
-            setDeleting(false);
-            setIndex((index + 1) % words.length);
-          }
-        }, speed);
-
-        return () => clearTimeout(timeout);
-      }, [text, deleting]);
-
-      return <span className="typing">{text}</span>;
-    };
-
-    const Navbar = () => (
-      <motion.nav initial={{ y: -100 }} animate={{ y: 0 }} className="fixed top-0 w-full bg-black/50 backdrop-blur z-50">
-        <div className="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-          <span className="font-bold text-xl gradient-text cursor-pointer">Nishant Pangare</span>
-          <div className="hidden md:flex gap-6 text-sm">
-            <a href="#home" className="hover:text-cyan-400">Home</a>
-            <a href="#about" className="hover:text-cyan-400">About</a>
-            <a href="#contact" className="hover:text-cyan-400">Contact</a>
-          </div>
-        </div>
-      </motion.nav>
-    );
-
-    const Hero = () => (
-      <section id="home" className="min-h-screen flex flex-col justify-center items-center text-center px-4 pt-28">
-        <motion.img
-          src="./nishant-photo.jpeg"
-          alt="Nishant Pangare"
-          className="w-40 h-40 rounded-full border-4 border-cyan-400 object-cover shadow-lg"
-          initial={{ scale: 0 }}
-          animate={{ scale: 1 }}
-          transition={{ duration: 0.8 }}
-        />
-        <motion.h1 className="text-4xl md:text-6xl font-bold mt-6 gradient-text"
-          initial={{ y: 30, opacity: 0 }}
-          animate={{ y: 0, opacity: 1 }}
-          transition={{ delay: 0.3 }}>
-          Nishant Pangare
-        </motion.h1>
-        <motion.p className="text-lg md:text-2xl mt-4 text-gray-300"
-          initial={{ y: 20, opacity: 0 }}
-          animate={{ y: 0, opacity: 1 }}
-          transition={{ delay: 0.5 }}>
-          <Typing words={["Aspiring Data Scientist", "AI Enthusiast", "ML Engineer", "Problem Solver"]} />
-        </motion.p>
-        <motion.div className="mt-6 flex gap-4"
-          initial={{ y: 20, opacity: 0 }}
-          animate={{ y: 0, opacity: 1 }}
-          transition={{ delay: 0.7 }}>
-          <a href="#contact" className="bg-cyan-500 px-6 py-2 rounded-full font-medium hover:bg-cyan-600 transition">Contact</a>
-          <a href="#projects" className="border border-cyan-400 px-6 py-2 rounded-full font-medium hover:bg-cyan-500 hover:text-black transition">Projects</a>
-        </motion.div>
-        <motion.div className="mt-8 flex gap-6 text-2xl"
-          initial={{ y: 20, opacity: 0 }}
-          animate={{ y: 0, opacity: 1 }}
-          transition={{ delay: 0.9 }}>
-          <a href="https://linkedin.com/in/nishant-pangare" target="_blank" className="hover:text-cyan-400"><i className="fab fa-linkedin"></i></a>
-          <a href="https://github.com/nishantpangare" target="_blank" className="hover:text-cyan-400"><i className="fab fa-github"></i></a>
-          <a href="mailto:nishant.pangare22@gmail.com" className="hover:text-cyan-400"><i className="fas fa-envelope"></i></a>
-        </motion.div>
-      </section>
-    );
-
-    const App = () => (
-      <div>
-        <Navbar />
-        <Hero />
-        <section id="projects" className="text-center py-20">
-          <h2 className="text-3xl font-bold mb-4">Projects Coming Soon!</h2>
-          <p className="text-gray-400">This section is under construction.</p>
-        </section>
-        <section id="contact" className="text-center py-20 bg-black/10">
-          <h2 className="text-3xl font-bold mb-4">Contact</h2>
-          <p className="text-gray-400">Email: nishant.pangare22@gmail.com</p>
-        </section>
-        <footer className="text-center text-gray-500 py-6 border-t border-gray-700">
-          &copy; {new Date().getFullYear()} Nishant Pangare. All rights reserved.
-        </footer>
-      </div>
-    );
-
-    ReactDOM.createRoot(document.getElementById("root")).render(<App />);
-  </script>
+  <footer class="mt-20 text-sm text-gray-500">&copy; 2025 Nishant Pangare</footer>
 </body>
 </html>
